--- a/_config.shoka.yml
+++ b/_config.shoka.yml
@@ -1,5 +1,5 @@
 # Alternate site name
-alternate: Random ξ
+alternate: Mirrorors
 
 open_graph:
   #twitter_id:
@@ -105,14 +105,14 @@ menu:
 # Value before `||` delimiter is the target permalink,
 # secend value is the name of Font icon.
 social:
-  #github: https://github.com/yourname || github || "#191717"
+  github: https://github.com/Mirakelor || github || "#191717"
   #google: https://plus.google.com/yourname || google
-  #twitter: https://twitter.com/yourname || twitter || "#00aff0"
-  #zhihu: https://www.zhihu.com/people/yourname || zhihu || "#1e88e5"
-  #music: https://music.163.com/#/user/home?id=yourid || cloud-music || "#e60026"
+  twitter: https://twitter.com || twitter || "#00aff0"
+  zhihu: https://www.zhihu.com/people/hides-low || zhihu || "#1e88e5"
+  music: https://music.163.com/#/user/home?id=1442268174 || cloud-music || "#e60026"
   #weibo: https://weibo.com/yourname || weibo || "#ea716e"
   #about: https://about.me/yourname || address-card || "#3b5998"
-  #email: mailto:yourname@mail.com || envelope || "#55acd5"
+  email: mailto:mirakelor@outlook.com || envelope || "#55acd5"
   #facebook: https://www.facebook.com/yourname || facebook
   #stackoverflow: https://stackoverflow.com/yourname || stack-overflow
   #youtube: https://youtube.com/yourname || youtube
@@ -122,16 +122,16 @@ social:
 
 sidebar:
   # Sidebar Position.
-  position: left
+  position: right
   # position: right
   # Replace the default avatar image and set the url here.
   avatar: avatar.jpg
 
 widgets:
   # if true, will show random posts
-  random_posts: true
+  random_posts: false
   # if true, will show recent comments
-  recent_comments: true
+  recent_comments: false
 
 footer:
   # Specify the date when the site was setup. If not defined, current year will be used.
@@ -184,39 +184,37 @@ creative_commons:
 # Valine
 # For more information: https://github.com/amehime/MiniValine
 valine:
-  appId: #Your_appId
-  appKey: #Your_appkey
+  appId: oalbYOloeRdnmpo2izUCF3oB-MdYXbMMI #Your_appId
+  appKey: 4tpMd47mWKxrhQSQMx61KADQ #Your_appkey
   placeholder: ヽ(○´∀`)ﾉ♪ # Comment box placeholder
   avatar: mp # Gravatar style : mp, identicon, monsterid, wavatar, robohash, retro
   pageSize: 10 # Pagination size
   lang: en
   visitor: true # Article reading statistic
   NoRecordIP: false # Whether to record the commenter IP
-  serverURLs: # When the custom domain name is enabled, fill it in here (it will be detected automatically by default, no need to fill in)
+  serverURLs: https://oalbyolo.api.lncldglobal.com # When the custom domain name is enabled, fill it in here (it will be detected automatically by default, no need to fill in)
   powerMode: true
   tagMeta:
-    visitor: 新朋友
-    master: 主人
+    visitor: 旅行者
+    master: Miracle
     friend: 小伙伴
-    investor: 金主粑粑
   tagColor:
     master: "var(--color-orange)"
     friend: "var(--color-aqua)"
-    investor: "var(--color-pink)"
   tagMember:
     master:
+      - 76f9820346b070949f7cfba362b6bfb0
       # - hash of master@email.com
       # - hash of master2@email.com
     friend:
       # - hash of friend@email.com
       # - hash of friend2@email.com
-    investor:
-      # - hash of investor1@email.com
 
 # bgm
 audio:
+  - https://music.163.com/#/playlist?id=7501859584
   # - title: 列表1
-  #   list:
+  #   list: 
   #    - https://music.163.com/#/playlist?id=2943811283
   #    - https://music.163.com/#/playlist?id=2297706586
   # - title: 列表2
