--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,7 @@ index_generator:
 # Category & Tag
 default_category: uncategorized
 category_map:
+  - Tretår: tretar
 tag_map:
 
 # Date / Time format
