--- a/_config.shoka.yml
+++ b/_config.shoka.yml
@@ -135,7 +135,7 @@ widgets:
 
 footer:
   # Specify the date when the site was setup. If not defined, current year will be used.
-  since: 2022
+  since: 
   icon:
     name: sakura rotate
     # Change the color of icon, using Hex Code.
