--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -96,6 +96,7 @@ menu:
     分类: /categories/ || th
     标签: /tags/ || tags
   友人帐: /friends/ || heart
+  留言板: /message-board/ || star
   关于: /about/ || magic
   # links: /links/ || user
 
