--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -185,6 +185,7 @@ creative_commons:
 # Valine
 # For more information: https://github.com/amehime/MiniValine
 valine:
+  enable: false
   appId: oalbYOloeRdnmpo2izUCF3oB-MdYXbMMI #Your_appId
   appKey: 4tpMd47mWKxrhQSQMx61KADQ #Your_appkey
   placeholder: ヽ(○´∀`)ﾉ♪ # Comment box placeholder
