fix: twikoo vendor

--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -297,6 +297,7 @@ vendors:
     comment: css/comment.css
     fancybox: combine/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css,npm/justifiedGallery@3.8.1/dist/css/justifiedGallery.min.css
   js:
+    twikoo: npm/twikoo@1.5.4/dist/twikoo.all.min.js
     pace: npm/pace-js@1.0.2/pace.min.js
     pjax: npm/pjax@0.2.8/pjax.min.js
     fetch: npm/whatwg-fetch@3.4.0/dist/fetch.umd.min.js
