feat:最后我放弃了添加twikoo评论系统

--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -132,7 +132,7 @@ widgets:
   # if true, will show random posts
   random_posts: false
   # if true, will show recent comments
-  recent_comments: false # Only for Valine
+  recent_comments: false
 
 footer:
   # Specify the date when the site was setup. If not defined, current year will be used.
@@ -184,9 +184,7 @@ creative_commons:
 # Comments
 # Valine
 # For more information: https://github.com/amehime/MiniValine
-# If you enable Valine and Twikoo at the same time, we will use Valine
 valine:
-  enable: false
   appId: oalbYOloeRdnmpo2izUCF3oB-MdYXbMMI #Your_appId
   appKey: 4tpMd47mWKxrhQSQMx61KADQ #Your_appkey
   placeholder: ヽ(○´∀`)ﾉ♪ # Comment box placeholder
@@ -212,13 +210,6 @@ valine:
     friend:
       # - hash of friend@email.com
       # - hash of friend2@email.com
-
-# Twikoo
-# For more information: https://twikoo.js.org
-twikoo:
-  enable: true
-  envId: https://ankare.vercel.app
-  lang: en-US
 
 # bgm
 audio:
