--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -192,6 +192,7 @@ valine:
   pageSize: 10 # Pagination size
   lang: en
   visitor: true # Article reading statistic
+  emoticonUrl:['https://cdn.jsdelivr.net/npm/alus@latest','https://cdn1.tianli0.top/gh/MiniValine/qq@latest','https://cdn1.tianli0.top/gh/MiniValine/Bilibilis@latest','https://cdn1.tianli0.top/gh/MiniValine/tieba@latest','https://cdn1.tianli0.top/gh/MiniValine/twemoji@latest','https://cdn1.tianli0.top/gh/MiniValine/weibo@latest']
   NoRecordIP: false # Whether to record the commenter IP
   serverURLs: https://leancloud.sonder.eu.org # When the custom domain name is enabled, fill it in here (it will be detected automatically by default, no need to fill in)
   powerMode: true
