Update Post Draft themes/shoka/_config.yml

--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -270,7 +270,7 @@ google_site_verification:
 
 # Bing Webmaster tools verification.
 # See: https://www.bing.com/webmaster
-bing_site_verification:
+bing_site_verification: 6A3844D809800461A69295B7E74C6938
 
 # Yandex Webmaster tools verification.
 # See: https://webmaster.yandex.ru
