Update Post Draft themes/shoka/_config.yml

--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -126,7 +126,7 @@ sidebar:
   position: right
   # position: right
   # Replace the default avatar image and set the url here.
-  avatar: https://img.afqaq.com/images/2022/08/08/B5E8BBA2-5ADE-4647-9D68-AA10C18E9F8A.jpg
+  avatar: 89D83438-8641-4BEF-83C2-E09FB396082C.jpeg
 
 widgets:
   # if true, will show random posts
