--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -126,7 +126,7 @@ sidebar:
   position: right
   # position: right
   # Replace the default avatar image and set the url here.
-  avatar: 89D83438-8641-4BEF-83C2-E09FB396082C.jpeg
+  avatar: 头像 (19).jpg
 
 widgets:
   # if true, will show random posts
