--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -200,7 +200,7 @@ valine:
     - https://cdn1.tianli0.top/gh/MiniValine/twemoji@latest
     - https://cdn1.tianli0.top/gh/MiniValine/weibo@latest
   NoRecordIP: false # Whether to record the commenter IP
-  serverURLs: https://leancloud.sonder.eu.org # When the custom domain name is enabled, fill it in here (it will be detected automatically by default, no need to fill in)
+  serverURLs: https://leancloud.fuckc.cf # When the custom domain name is enabled, fill it in here (it will be detected automatically by default, no need to fill in)
   powerMode: true
   tagMeta:
     visitor: 旅行者
