--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 镜花水月
 subtitle: UNATTAINABLE ILLUSIONS
-description: 拨弄时光的指针，遨游命运的影子，欺诈与恶作剧的化身
+description: 拨弄时光的指针~
 keywords: Youth,Love,Miracle,Creator,Mirakelor,Sonder,Novel,Blog,Monocle
 author: Mirakelor
 language: en
