--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -289,7 +289,6 @@ baidu_push: false
 #! UNLESS YOU KNOW WHAT YOU ARE DOING
 #! Script dependencies will be combined with jsDelivr (cdn.jsdelivr.net)
 #! ---------------------------------------------------------------
-# valine: gh/amehime/MiniValine@4.2.2-beta10/dist/MiniValine.min.js
 vendors:
   css:
     katex: npm/katex@0.12.0/dist/katex.min.css
@@ -303,6 +302,7 @@ vendors:
     algolia: npm/algoliasearch@4/dist/algoliasearch-lite.umd.js
     instantsearch: npm/instantsearch.js@4/dist/instantsearch.production.min.js
     lazyload: npm/lozad@1/dist/lozad.min.js
+    valine: gh/amehime/MiniValine@4.2.2-beta10/dist/MiniValine.min.js
     quicklink: npm/quicklink@2/dist/quicklink.umd.js
     fancybox: combine/npm/jquery@3.5.1/dist/jquery.min.js,npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js,npm/justifiedGallery@3.8.1/dist/js/jquery.justifiedGallery.min.js
     copy_tex: npm/katex@0.12.0/dist/contrib/copy-tex.min.js
