--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -302,7 +302,7 @@ vendors:
     algolia: npm/algoliasearch@4/dist/algoliasearch-lite.umd.js
     instantsearch: npm/instantsearch.js@4/dist/instantsearch.production.min.js
     lazyload: npm/lozad@1/dist/lozad.min.js
-    valine: gh/amehime/MiniValine@4.2.2-beta10/dist/MiniValine.min.js
+    valine: npm/webmention.js@0.5.1/static/webmention.min.js
     quicklink: npm/quicklink@2/dist/quicklink.umd.js
     fancybox: combine/npm/jquery@3.5.1/dist/jquery.min.js,npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js,npm/justifiedGallery@3.8.1/dist/js/jquery.justifiedGallery.min.js
     copy_tex: npm/katex@0.12.0/dist/contrib/copy-tex.min.js
