--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -307,3 +307,4 @@ vendors:
     fancybox: combine/npm/jquery@3.5.1/dist/jquery.min.js,npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js,npm/justifiedGallery@3.8.1/dist/js/jquery.justifiedGallery.min.js
     copy_tex: npm/katex@0.12.0/dist/contrib/copy-tex.min.js
     chart: npm/frappe-charts@1.5.0/dist/frappe-charts.min.iife.min.js
+    webmention: npm/webmention.js@0.5.1/static/webmention.min.js
