--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -262,7 +262,7 @@ baidu_analytics: # <app_id>
 disable_baidu_transformation: true
 
 # Automatically add external URL with Base64 encrypt & decrypt.
-exturl: true
+exturl: false
 
 # Google Webmaster tools verification.
 # See: https://www.google.com/webmasters
