--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -86,7 +86,7 @@ font:
 
 # project of https://www.iconfont.cn/
 # //at.alicdn.com/t/font_1832207_c8i9n1ulxlt.css => 1832207_c8i9n1ulxlt
-iconfont: "1832207_igi8uaupcus"
+iconfont: "font_3125619_43k52duoqus"
 
 menu:
   home: / || home
@@ -108,8 +108,9 @@ menu:
 social:
   github: https://github.com/Mirakelor || github || "#191717"
   #google: https://plus.google.com/yourname || google
-  twitter: https://twitter.com || twitter || "#00aff0"
-  zhihu: https://www.zhihu.com/people/hides-low || zhihu || "#1e88e5"
+  #twitter: https://twitter.com || twitter || "#00aff0"
+  dolphin: https://fuckc.cf/@Mirakelor || dolphin || "#00aff0"
+  #zhihu: https://www.zhihu.com/people/hides-low || zhihu || "#1e88e5"
   music: https://music.163.com/#/user/home?id=1442268174 || cloud-music || "#e60026"
   #weibo: https://weibo.com/yourname || weibo || "#ea716e"
   #about: https://about.me/yourname || address-card || "#3b5998"
